--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -10,7 +10,9 @@
     padding: 10px;
     margin-top: 15px;
 }
-
+.label{
+    margin: 15px 0 0 0;
+}
 .select {
     padding: 10px;
     margin-top: 15px;
