--- a/src/components/button/Button.css
+++ b/src/components/button/Button.css
@@ -1,9 +1,8 @@
 .button {
     padding: 10px 15px;
-    background: var(--tg-theme-bg-color);
+    background: var(--tg-theme-button-color);
     color: var(--tg-theme-button-text-color);
     border: none;
     outline: none;
     cursor: pointer;
-    line-height: 0;
 }
