--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -9,6 +9,8 @@
     width: 100%;
     padding: 10px;
     margin-top: 15px;
+    color: black;
+    font-size: 14px;
 }
 .label{
     margin: 15px 0 0 0;
